--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,16 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -30,6 +33,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapActivity"/>
+        <activity android:name=".Weather_activity"/>
     </application>
 
 </manifest>
