--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".WeatherActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="true">
+        <activity android:name=".WeatherActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -31,6 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapActivity" />
+
     </application>
 
 </manifest>
